# RAHAT-ONE

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
backend/: .gitignore  API.md  package-lock.json  package.json  server.js
backend/config/: odoo.config.js
backend/scripts/: createEmployeeUser.js  createHRUser.js  listUsers.js  testPassword.js
backend/src/: app.js
backend/src/adapters/: odooAdapter.js
backend/src/controllers/: attendanceController.js  auditController.js  authController.js  branchController.js  departmentController.js  employeeController.js  expenseController.js  hrDashboardController.js  hrVerificationController.js  leaveController.js  lookupController.js  onboardingController.js  registrationController.js
backend/src/db/: migrate.js  neon.js
backend/src/middleware/: authMiddleware.js
backend/src/routes/: attendanceRoutes.js  auditRoutes.js  authRoutes.js  branchRoutes.js  departmentRoutes.js  employeeRoutes.js  expenseRoutes.js  hrRoutes.js  hrVerificationRoutes.js  leaves.js  leavesRoutes.js  lookupRoutes.js  onboardingRoutes.js  registrationRoutes.js
backend/src/services/: authService.js  documentIntelligenceService.js  expenseService.js  fraudDetectionService.js  leaveService.js  modalService.js  onboardingService.js  powerAutomateService.js  verificationService.js
backend/src/utils/: fileHandler.js  imageHashing.js  responseHandler.js
config/: odoo.conf
frontend/: package-lock.json  package.json
frontend/public/: index.html  manifest.json  service-worker.js
frontend/public/icons/: README.md
frontend/scripts/: generate-icons.js
frontend/src/: App.js  index.css  index.js
frontend/src/components/: CNICViewerModal.js  DocumentViewerModal.js  InitiateOnboardingModal.js  PWAGuard.css  PWAGuard.jsx  ProtectedRoute.js
frontend/src/contexts/: AuthContext.jsx  ThemeModeContext.js
frontend/src/pages/: ApproveExpense.js  ApproveLeave.js  AuditLogPage.css  AuditLogPage.jsx  EmployeeActivityPage.jsx  EmployeeAttendanceHistoryPage.css  EmployeeAttendanceHistoryPage.js  EmployeeAttendancePage.css  EmployeeAttendancePage.js  EmployeeDashboard.js  EmployeeLeavePage.js  EmployeeProfile.js  ExpenseHistory.jsx  ExpenseSubmission.jsx  HRAttendanceOverviewPage.css  HRAttendanceOverviewPage.js  HRBranchManagementPage.css  Login.css  (+18 more)
modal/: fraud_detection.py
scripts/: check_allocations.py  check_employee_data.py  check_user_employee_link.py  cleanup_odoo_data.py  create_rpa_bot.py  debug_leave_balance.py  populate_mock_data.py  setup_leave_types.py
(+60 files in other folders)
